<resources>
    <string name="app_name">GradU</string>
    <string name="hdng_admin_signin">GradU Admin Account</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_signin">SIGN IN</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_home">Back to Home</string>
    <string name="btn_back">Back</string>
    <string name="btn_AddUnivInfo">Add University Info</string>
    <string name="btn_EditUnivInfo">Edit University Info</string>
    <string name="welcome">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_admin_login">GradU Admin Login</string>
    <string name="title_activity_add_univ_info">Add University Info</string>

    <string name="hint_univname">University Name</string>
    <string name="hint_univdesc">Description</string>
    <string name="hint_univlocn">Location</string>
    <string name="hint_accepRate">Acceptance Rate (%)</string>
    <string name="hint_tuition_fees">Tuition Fees ($)</string>
    <string name="hint_gpa_actual">UG GPA out of 4</string>
    <string name="hint_workExp">Work Experience in years</string>
    <string name="hint_paperPublished">Paper(s) Published</string>
    <string name="btn_NaviUserLogin">User Login</string>
    <string name="btn_NaviAdminLogin">Admin Login</string>
    <string name="hint_res_opp_prompt">Select</string>
    <string-array name="hint_res_opp_arrays">
        <item>Select</item>
        <item>Excellent</item>
        <item>Good</item>
        <item>Average</item>
    </string-array>
    <string-array name="states_list">
        <item>Select</item>
        <item>Arizona</item>
        <item>Minnesota</item>
        <item>NewYork</item>
        <item>Illinois</item>
        <item>Texas</item>
        <item>California</item>
        <item>Virginia</item>
        <item>Florida</item>
        <item>Alaska</item>
        <item>Washington</item>
    </string-array>
    <string name="hint_quant">Quant</string>
    <string name="hint_verbal">Verbal</string>
    <string name="hint_awa">AWA</string>
    <string name="hint_toefl">TOEFL</string>
    <string name="hint_ielts">IELTS</string>
    <string name="hint_comp">Comp</string>
    <string name="hint_elec">Elec</string>
    <string name="hint_civil">Civil</string>
    <string name="hint_mis">MIS</string>
    <string name="hint_mech">Mech</string>
    <string name="hint_national">National</string>
    <string name="hdng_signin">GradU Account</string>
    <string name="btn_link_to_signup">New User? SignUp..</string>
    <string name="btn_MyProfile">My Profile</string>
    <string name="btn_GradSchoolRec">Grad School Recommender</string>
    <string name="btn_UnivInfo">University Information</string>

    <string name="title_activity_edit_univ_info">Edit University Info</string>
    <string name="title_activity_admin_home">Admin Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_admin_login">Admin Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register">Sign Up</string>

    <string name="hint_name">Full name</string>
    <string name="hint_emailId">Email address</string>
    <string name="hint_undergradGpa">Undergraduate GPA(0.0 to 4.0)</string>
    <string name="hint_greQuant">GRE Quant Score (130 to 170)</string>
    <string name="hint_greVerbal">GRE Verbal Score (130 to 170)</string>
    <string name="hint_engScore">TOEFL iBT Score(0-120)</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered? Login here</string>
    <string name="name">Full name</string>
    <string name="courses_prompt">Choose a course</string>
    <string-array name="courses">
        <item>computer science</item>
        <item>civil engineering</item>
        <item>electrical engineering</item>
        <item>mechanical engineering</item>
        <item>MIS</item>
    </string-array>
    <string name="greAWA_prompt">GRE AWA Score</string>
    <string-array name="scores">
        <item>0.0</item>
        <item>0.5</item>
        <item>1.0</item>
        <item>1.5</item>
        <item>2.0</item>
        <item>2.5</item>
        <item>3.0</item>
        <item>3.5</item>
        <item>4.0</item>
        <item>4.5</item>
        <item>5.0</item>
        <item>5.5</item>
        <item>6.0</item>
    </string-array>
    <string name="workExp_prompt">Select applicable work exp.(in years)</string>
    <string-array name="workExp">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="title_activity_apply_filter">ApplyFilterActivity</string>
    <string name="title_activity_reco_results">RecoResults</string>
    <string name="title_activity_university_list">UniversityListActivity</string>
    <string name="title_activity_university_info">UniversityInfoActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>



</resources>
